<resources>
    <string name="app_name">AfterWork</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Paramètres</string>
    <string name="title_activity_login">Se connecter</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="action_sign_in">Se connecter ou s\'enregistrer</string>
    <string name="action_sign_in_short">Se connecter</string>
    <string name="error_invalid_email">Cette adresse mail est invalid</string>
    <string name="error_invalid_password">Ce mot de passe est trop court</string>
    <string name="error_incorrect_password">Ce mot de passe est incorrect</string>
    <string name="error_field_required">Ce champ est requis</string>
    <string name="permission_rationale">"Les autorisations relatives aux contacts sont nécessaires pour fournir la complétion des emails."</string>
    <string name="error_empty_password">Le mot de passe est vide</string>
    <string name="user_nomprenom">Nom Prenom</string>
    <string name="user_mail">nom.prenom@umontpellier.fr</string>
    <string name="connexion">Connexion</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nom_matiere">Nom matière</string>
    <string name="annuler">Annuler</string>
    <string name="matiere">Matière</string>
    <string name="cours">Cours</string>
    <string name="qcm">QCM</string>
    <string name="profil">Profil</string>
    <string name="logout">Se déconnecter</string>
    <string name="text_filtre">Filtrées par : </string>
    <string name="domaine">\@etu.umontpellier.fr</string>
    <string name="type_cours">Les types de cours</string>
    <string name="tds">TDs</string>
    <string name="tps">TPs</string>
    <string name="all_cours">Toutes les leçons</string>
    <string name="list_matiere">Liste des matières :</string>
    <string name="matiere_cours">Matiere du cours</string>
    <string name="type_du_cours">Type du cours</string>
    <string name="nom_cours">nom du cours</string>
    <string name="filtre_cours">, Cours</string>
    <string name="filtre_tds">, TDs</string>
    <string name="filtre_tps">, TPs</string>
    <string name="sans_filtre">Les leçons ne sont pas filtrées</string>
    <string name="liste_cours">Liste des cours</string>
    <string name="title_activity_sensor">SensorActivity</string>

    <string name="nouveau_qcm">Faire un nouveau QCM</string>
    <string name="bouton_ancien_qcm">Voir les résultats</string>
    <string name="error_invalid_email_or_password">Erreur : Votre mail ou mot de passe est invalide !</string>
    <string name="text_parcours">Parcours : </string>
    <string name="liste_qcm_done">Résultats des QCM</string>
    <string name="note_qcm">/10</string>
    <string name="nom_qcm_done">Nom QCM</string>
    <string name="titre_qcm_new">Choisissez un nouveau QCM</string>
    <string name="qcm_non_valide">Vous n\'avez pas validé toutes les questions !</string>
    <string name="list_qcm_vide">Aucun QCM disponible</string>
    <string name="list_cours_vide">Aucun cours disponible</string>
    <string name="title_activity_cours">CoursActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="doc_pas_dispo">Ce document n\'est pas disponible</string>
    <string name="bouton_play">Play</string>
</resources>
