<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/cour_nom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nom_cours"
        android:textSize="20dp"
        android:layout_marginLeft="20dp"/>
    <TextView
        android:id="@+id/cours_matiere"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cour_nom"
        android:layout_marginLeft="40dp"
        android:text="@string/matiere_cours"
        android:textSize="18dp"/>
    <TextView
        android:id="@+id/cours_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_below="@+id/cours_matiere"
        android:text="@string/type_du_cours"
        android:textSize="16dp"/>
</RelativeLayout>