<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChoixTypeCourFragment">
    <LinearLayout
        android:id="@+id/linear_up_arrow"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center_horizontal"
        android:clickable="true">
        <ImageView
        android:layout_width="30dp"
        android:layout_height="20dp"
        android:src="@drawable/up_arrow"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/relative_nom_matiere">
    <TextView
        android:id="@+id/nom_matiere"
        android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/type_cours"
            android:textSize="28dp"
            android:paddingTop="30dp"
        android:gravity="center_horizontal"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/nom_matiere"
        android:gravity="center_horizontal"
        android:layout_marginTop="30dp">
        <Button
            android:id="@+id/bouton_cour"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/cours"
            android:textSize="18dp"
            android:padding="10dp"
            android:inputType="textCapSentences"
            android:layout_marginBottom="15dp"

            android:paddingTop="30dp"/>
        <Button
            android:id="@+id/bouton_td"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/tds"
            android:textSize="18dp"
            android:padding="10dp"
            android:layout_below="@+id/bouton_cour"
            android:inputType="textCapSentences"
            android:layout_marginBottom="15dp"/>
        <Button
            android:id="@+id/bouton_tp"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/tps"
            android:textSize="18dp"
            android:padding="10dp"
            android:inputType="textCapSentences"
            android:layout_below="@+id/bouton_td"/>
        </RelativeLayout>
    </RelativeLayout>
    <Button
        android:id="@+id/tous_les_cours"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/all_cours"
        android:textSize="18dp"
        android:inputType="textCapSentences" />
</FrameLayout>
